--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style=" font-family: 'Roboto Mono', serif">
+  <body style=" font-family: 'Roboto Mono', serif; background-image: url(public\paper.jpg); background-repeat: no-repeat; background-size: cover; " >
     <div id="root" style=" font-family: 'Roboto Mono', serif"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
