--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/4922073.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>GB Blog</title>
   </head>
   <body style=" font-family: 'Roboto Mono', serif; background-image: url(public\paper.jpg); background-repeat: no-repeat; background-size: cover; " >
     <div id="root" style=" font-family: 'Roboto Mono', serif"></div>
